# nearby-payments-api

./: .air.toml  .bazelrc  .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  MODULE.bazel  TEST_GUIDE.md  cloudbuild.yaml  go.mod  go.sum  nearby-api.postman_collection.json  railway.toml  repo.bazel
.github/workflows/: ci.yml
apps/android/: .gitignore  BUILD.bazel  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/android/app/: BUILD.bazel  build.gradle.kts
apps/android/app/src/androidTest/java/com/variance/nearby/: ExampleInstrumentedTest.kt
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/variance/nearby/: MainActivity.kt
apps/android/app/src/main/java/com/variance/nearby/ui/theme/: Color.kt  Theme.kt  Type.kt
apps/android/app/src/test/java/com/variance/nearby/: ExampleUnitTest.kt
apps/android/bridge/: BUILD.bazel  build.gradle.kts  gradle.properties  gradle.properties.tmpl
apps/android/gradle/: libs.versions.toml
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/api/: .env.example  BUILD.bazel  Dockerfile  Makefile  README.md  go.mod
apps/api/cmd/api/: BUILD.bazel  main.go
apps/api/internal/avs/: BUILD.bazel  aggregator.go  client.go  errors.go  operator.go  types.go
apps/api/internal/config/: BUILD.bazel  config.go
apps/api/internal/db/: BUILD.bazel  redis.go
apps/api/internal/db/migrations/: 002_deposit.sql  006_avs.sql  007_deposit_v2.sql  008_deposit_revert_to_bridge.sql  009_deposits.sql  010_deposit_routes_address.sql  011_nearby_sessions_v2.sql  012_user_avatar.sql
apps/api/internal/domain/auth/: BUILD.bazel  errors.go  handler.go  handler_test.go  service.go  store.go  types.go
apps/api/internal/domain/deposit/: BUILD.bazel  blockradar_client.go  bridge_client.go  errors.go  handler.go  processor.go  processor_test.go  service.go  types.go  webhook.go  webhook_test.go
apps/api/internal/domain/names/: BUILD.bazel  errors.go  service_test.go  store.go  types.go
apps/api/internal/domain/nearby/: BUILD.bazel  handler.go  service_test.go  store.go
apps/api/internal/domain/payment/: BUILD.bazel  errors.go  handler.go  handler_test.go  service.go  service_test.go  store.go  types.go
apps/api/internal/errors/: BUILD.bazel  app_error.go  http.go
apps/api/internal/middleware/: BUILD.bazel  idempotency.go
apps/api/internal/sui/: BUILD.bazel  blake2b.go  sponsor.go  types.go
apps/api/internal/utils/: BUILD.bazel  id.go  time.go
apps/api/internal/walrus/: BUILD.bazel  client.go
apps/api/router/: BUILD.bazel  router.go
apps/api/static/: auth_test.html
apps/ios/: BUILD.bazel  info.plist
apps/ios/nearby/: ContentView.swift  Item.swift  nearbyApp.swift
apps/ios/nearby.xcodeproj/: project.pbxproj
apps/ios/nearby.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
apps/ios/nearby.xcodeproj/project.xcworkspace/xcuserdata/peter.xcuserdatad/: UserInterfaceState.xcuserstate
apps/ios/nearby.xcodeproj/xcuserdata/peter.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/ios/nearbyTests/: nearbyTests.swift
apps/ios/nearbyUITests/: nearbyUITests.swift  nearbyUITestsLaunchTests.swift
cmd/api/: main.go
cmd/migrate/: main.go
docs/architecture/: 001-arch-organization.md  002-arch-auth.md  003-arch-avs.md  004-arch-custodial-profiles.md  005-arch-deposit-routes.md  007-arch-nearby-assist.md  008-arch-miscellaneous.md  009-arch-transaction-funding.md  010-arch-mobile-app.md
internal/avs/: aggregator.go  client.go  errors.go  types.go
internal/config/: config.go
internal/db/: migrate.go  postgres.go
internal/db/migrations/: 001_auth.sql  003_payment.sql  004_names.sql  005_nearby.sql
internal/domain/auth/: errors.go  handler.go  middleware.go  service.go  types.go
internal/domain/deposit/: errors.go  fincra_client.go  handler.go  handler_test.go  processor.go  service.go  store.go  store_test.go  types.go  webhook.go
internal/domain/names/: errors.go  handler.go  service.go  store.go  types.go
internal/domain/nearby/: errors.go  handler.go  service.go  types.go
internal/domain/payment/: errors.go  handler.go  service.go  types.go
internal/middleware/: idempotency.go  idempotency_test.go  logging.go  recovery.go  request_id.go
internal/sui/: client.go  multisig.go  sponsor.go  types.go
internal/utils/: crypto.go
router/: router.go
tools/android/: BUILD.bazel  gradle-build.sh  maven_install.json
tools/bazel/: defs.bzl
tools/bazel/patches/: BUILD.bazel  rules_android_java_base_extras.patch
tools/format/: BUILD.bazel  format.sh  format_check.sh
tools/git-hooks/: pre-commit
tools/remote-cache/: package.json  r2-lifecycle.json  worker-configuration.d.ts  wrangler.jsonc
tools/remote-cache/scripts/: push-maven-local.sh
tools/remote-cache/src/: index.ts
