module(
    name = "nearby",
    version = "0.1.0",
)

bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "apple_support", version = "2.3.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//apps/api:go.mod")
use_repo(go_deps, "com_github_go_chi_chi_v5", "com_github_jackc_pgx_v5", "com_github_joho_godotenv", "com_github_oklog_ulid_v2", "com_github_redis_go_redis_v9")
