module(
    name = "nearby",
    version = "0.1.0",
)

bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "apple_support", version = "2.3.0")
bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_android", version = "0.7.2")
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_android_ndk", version = "0.1.5")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
single_version_override(
    module_name = "protobuf",
    version = "33.4",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//apps/api:go.mod")
use_repo(go_deps, "com_github_go_chi_chi_v5", "com_github_jackc_pgx_v5", "com_github_joho_godotenv", "com_github_oklog_ulid_v2", "com_github_redis_go_redis_v9")

java_toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")
use_repo(java_toolchains, "local_jdk")

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.artifact(
    artifact = "activity-ktx",
    group = "androidx.activity",
    version = "1.9.3",
)
maven.artifact(
    artifact = "collection",
    group = "androidx.collection",
    version = "1.4.2",
)
maven.artifact(
    artifact = "collection-jvm",
    group = "androidx.collection",
    version = "1.4.2",
)
maven.artifact(
    artifact = "emoji2",
    group = "androidx.emoji2",
    version = "1.3.0",
)
maven.artifact(
    artifact = "lifecycle-common",
    group = "androidx.lifecycle",
    version = "2.8.7",
)
maven.artifact(
    artifact = "lifecycle-runtime",
    group = "androidx.lifecycle",
    version = "2.8.7",
)
maven.artifact(
    artifact = "lifecycle-viewmodel",
    group = "androidx.lifecycle",
    version = "2.8.7",
)
maven.install(
    artifacts = [
        # AndroidX Core & Lifecycle
        "androidx.core:core:1.15.0",
        "androidx.core:core-ktx:1.15.0",
        "androidx.lifecycle:lifecycle-livedata-core:2.8.7",
        "androidx.lifecycle:lifecycle-livedata-core-ktx:2.8.7",
        "androidx.lifecycle:lifecycle-livedata:2.8.7",
        "androidx.lifecycle:lifecycle-process:2.8.7",
        "androidx.lifecycle:lifecycle-runtime:2.8.7",
        "androidx.lifecycle:lifecycle-runtime-ktx:2.8.7",
        "androidx.lifecycle:lifecycle-runtime-compose-android:2.8.7",
        "androidx.lifecycle:lifecycle-service:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.7",
        "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.8.7",

        # Activity Compose
        "androidx.activity:activity:1.9.3",
        "androidx.activity:activity-compose:1.9.3",
        "androidx.activity:activity-ktx:1.9.3",

        # Compose compiler plugin for the Bazel Kotlin target.
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.3.20",

        # Compose libraries. Versions come from the Compose BOM.
        "androidx.compose.animation:animation-core",
        "androidx.compose.foundation:foundation",
        "androidx.compose.foundation:foundation-layout",
        "androidx.compose.material:material-icons-core",
        "androidx.compose.material3:material3",
        "androidx.compose.runtime:runtime",
        "androidx.compose.ui:ui",
        "androidx.compose.ui:ui-graphics",
        "androidx.compose.ui:ui-tooling-preview",

        # Third-party / Other
        "org.swift.swiftkit:swiftkit-core:1.0-SNAPSHOT",
    ],
    boms = [
        "androidx.compose:compose-bom:2024.12.01",
    ],
    known_contributing_modules = ["protobuf"],
    lock_file = "//tools/android:maven_install.json",
    repositories = [
        "https://nearby-bezel-cache.variance.space/maven",
        "https://dl.google.com/dl/android/maven2",
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven")
