load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_apple//apple:versioning.bzl", "apple_bundle_version")
load("@rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "AppLib",
    srcs = glob([
        "nearby/**/*.swift",
    ]),
    module_name = "nearby",
    deps = [
        "//packages/hello:Hello",
        "//packages/ui:UI",
    ],
)

apple_bundle_version(
    name = "NearbyVersion",
    build_version = "1",
    short_version_string = "1.0",
)

ios_application(
    name = "Nearby",
    bundle_id = "com.variance.nearby",
    families = [
        "iphone",
    ],
    infoplists = ["info.plist"],
    minimum_os_version = "17.0",
    version = ":NearbyVersion",
    visibility = ["//visibility:public"],
    deps = [
        ":AppLib",
    ],
)
