load("@rules_android//rules:rules.bzl", "aar_import")
load("@rules_jvm_external//:defs.bzl", "artifact")

aar_import(
    name = "bridge_aar",
    aar = "build/outputs/aar/bridge-debug.aar",
    visibility = ["//visibility:public"],
    deps = [
        artifact("org.swift.swiftkit:swiftkit-core"),
    ],
)

exports_files(["gradle.properties.tmpl"])
