load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "router",
    srcs = ["router.go"],
    importpath = "github.com/vaariance/nearby/router",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/api/internal/domain/auth",
        "//apps/api/internal/domain/deposit",
        "//apps/api/internal/domain/names",
        "//apps/api/internal/domain/nearby",
        "//apps/api/internal/domain/payment",
        "//apps/api/internal/middleware",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)
