load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "migrate.go",
        "postgres.go",
        "redis.go",
    ],
    importpath = "github.com/vaariance/nearby/internal/db",
    visibility = ["//apps/api:__subpackages__"],
    deps = [
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)
