load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = [
        "errors.go",
        "handler.go",
        "middleware.go",
        "service.go",
        "store.go",
        "types.go",
    ],
    importpath = "github.com/vaariance/nearby/internal/domain/auth",
    visibility = ["//apps/api:__subpackages__"],
    deps = [
        "//apps/api/internal/errors",
        "//apps/api/internal/utils",
        "//apps/api/internal/walrus",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)
